fixing width of build configure by media size, as overflowing for *no* reason

--- a/src/Modules/BuildConfigure/Assets/css/buildconfigure.css
+++ b/src/Modules/BuildConfigure/Assets/css/buildconfigure.css
@@ -31,3 +31,31 @@
     position: relative;
     left: 50%;
 }
+
+@media(min-width:700px) and (max-width:1000px) {
+    html {
+        overflow-x: hidden;
+    }
+    #wrapper {
+        max-width: 950px;
+    }
+}
+
+@media(min-width:1000px) and (max-width:1200px) {
+    html {
+        overflow-x: hidden;
+    }
+    #wrapper {
+        max-width: 1150px;
+    }
+}
+
+@media(min-width:1200px) {
+    html {
+        max-width: 1280px;
+        overflow-x: hidden;
+    }
+    #wrapper {
+        max-width: 1280px;
+    }
+}
